--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://kalyankumarpulapaka:Kalyan8985@cluster0.nupa5fa.mongodb.net/A_job
 JWT_SECRET= Kownsu2773n
 
+GOOGLE_CLIENT_ID=1060720337223-p5uqn2jeppbs42vl4m774pvlmq9k0i0b.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=Khsl8snd56dbascslnccf
